# info_plugin

./: CMakeLists.txt  README.md  info_plugin.cpp
include/eosio/info_plugin/: info_plugin.hpp
